tests/cases/compiler-development/artifact/errors/diagnostic-generic-uninferred.diagnostic
diagnostic error code=T0001 family=type message="generic type 'T' could not be inferred for 'make'" sources=1 labels=2 notes=1 helps=1
  Source source_id=0 kind=file path="tests/cases/generics/errors/generic-uninferred.ari" display="tests/cases/generics/errors/generic-uninferred.ari" bytes=73
  Label index=0 role=primary source_id=0 source="tests/cases/generics/errors/generic-uninferred.ari" line=6 column=10 end_line=6 end_column=14 byte_start=63 byte_end=67 message=""
  Snippet label=0 text="  --> tests/cases/generics/errors/generic-uninferred.ari:6:10\n   |\n 6 |   return make();\n   |          ^^^^"
  Label index=1 role=secondary source_id=0 source="tests/cases/generics/errors/generic-uninferred.ari" line=1 column=9 end_line=1 end_column=10 byte_start=8 byte_end=9 message="generic parameter 'T' must be resolved before specialization"
  Snippet label=1 text="  --> tests/cases/generics/errors/generic-uninferred.ari:1:9\n   |\n 1 | fn make[T]() -> T {\n   |         ^"
  Note index=0 location=none message="generic function specialization requires every type parameter to have one concrete type"
  Help index=0 location=none message="pass an explicit type argument for 'T' or add a value argument that fixes it"
